@@ -1,2 +1,0 @@
-"google-apitools" is a collection of utilities to make it easier to build
-client-side tools, especially those that talk to Google APIs.
